--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <input type="file" placeholder="IFC file" id="file-input" />
     <div id="viewer-container"></div>
     <script src="./bundle.js"></script>
   </body>
