--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <input type="file" placeholder="IFC file" id="file-input" />
-    <div id="viewer-container"></div>
+    <canvas id="three-canvas"></canvas>
     <script src="./bundle.js"></script>
   </body>
 </html>
