--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <input type="file" placeholder="IFC file" id="file-input" />
+    <div class="ifc-tree-menu">
+      <ul id="myUL">
+        <li id="tree-root"></li>
+      </ul>
+    </div>
     <div id="viewer-container"></div>
     <script src="./bundle.js"></script>
   </body>
