feat: printing properties

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <body>
     <input type="file" placeholder="IFC file" id="file-input" />
     <div id="viewer-container"></div>
+    <div class="ifc-property-menu">
+      <div class="ifc-property-item">
+        <div>Key</div>
+        <div class="ifc-property-value">Value</div>
+      </div>
+      <div id="ifc-property-menu-root"></div>
+    </div>
     <script src="./bundle.js"></script>
   </body>
 </html>
