--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <input type="file" placeholder="IFC file" id="file-input" />
     <div class="ifc-tree-menu">
       <ul id="myUL">
-        <li id="tree-root"></li>
+        <li id="tree-root">
+          <span class="caret"></span>
+        </li>
       </ul>
     </div>
     <div id="viewer-container"></div>
