--- a/index.html
+++ b/index.html
@@ -9,12 +9,43 @@
   </head>
   <body>
     <input type="file" placeholder="IFC file" id="file-input" />
-    <div class="ifc-tree-menu">
-      <ul id="myUL">
-        <li id="tree-root"></li>
-      </ul>
+    <div id="viewer-container" class="viewer-container">
+      <div class="ifc-tree-menu">
+        <ul id="myUL">
+          <li id="tree-root"></li>
+        </ul>
+      </div>
+      <div class="checkboxes">
+        <div>
+          <input checked="true" id="IFCWALLSTANDARDCASE" type="checkbox" />
+          Walls
+        </div>
+        <div>
+          <input checked="true" id="IFCSLAB" type="checkbox" />
+          Slabs
+        </div>
+        <div>
+          <input checked="true" id="IFCWINDOW" type="checkbox" />
+          Windows
+        </div>
+        <div>
+          <input checked="true" id="IFCFURNISHINGELEMENT" type="checkbox" />
+          Furniture
+        </div>
+        <div>
+          <input checked="true" id="IFCDOOR" type="checkbox" />
+          Doors
+        </div>
+        <div>
+          <input checked="true" id="IFCMEMBER" type="checkbox" />
+          Curtain wall structure
+        </div>
+        <div>
+          <input checked="true" id="IFCPLATE" type="checkbox" />
+          Curtain wall plates
+        </div>
+      </div>
     </div>
-    <div id="viewer-container"></div>
     <script src="./bundle.js"></script>
   </body>
 </html>
