need fix, doesn't work

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <input type="file" placeholder="IFC file" id="file-input" />
+    <div class="text-container">
+      <p>Progress:</p>
+      <p class="progress-text">0</p>
+      <p>%</p>
+    </div>
     <div id="viewer-container" class="viewer-container">
       <div class="ifc-tree-menu">
         <ul id="myUL">
